# 3dngin

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
docs/roadmap/: 00-overview.md  01-foundation.md  02-rendering.md  03-scene-physics.md  04-audio-assets.md  05-game-systems.md  06-polish-optimization.md
